Java 11 support